# tokenshare

./: Cargo.toml  routingfix.diff  spin.toml  tailwind.config.js
src/: app.rs  crypto.rs  main.rs  server.rs
src/app/: getsecret.rs  savesecret.rs
style/: main.scss
