[package]
name = "tokenshare"
authors = ["itowlson <ivan.towlson@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
cfg-if = "1"
console_error_panic_hook = "0.1"
http = "0.2"
leptos = { git = "https://github.com/leptos-rs/leptos", rev = "6014a70d0def869f12282d2df8b6c442a012964d" }
leptos_integration_utils = { git = "https://github.com/leptos-rs/leptos", rev = "6014a70d0def869f12282d2df8b6c442a012964d", optional = true }
leptos_meta = { git = "https://github.com/leptos-rs/leptos", rev = "6014a70d0def869f12282d2df8b6c442a012964d" }
leptos_router = { git = "https://github.com/leptos-rs/leptos", rev = "6014a70d0def869f12282d2df8b6c442a012964d" }
leptos-spin = { git = "https://github.com/fermyon/leptos-spin", branch = "main", optional = true }
serde = "1.0.192"
chacha20poly1305 = "0.10.1"
base64 = "0.21.5"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
rand = "0.8.5"
block-modes = "0.9.1"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[workspace]

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "dep:wasm-bindgen"]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos/spin",
  "dep:spin-sdk",
  "dep:leptos-spin",
  "dep:leptos_integration_utils"
]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name   
output-name = "tokenshare"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
tailwind-input-file = "style/tailwind.css"
tailwind-config-file = "tailwind.config.js"
browserquery = "defaults"